loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:8: error: '=>' expected but integer literal found.
    case >=3 => gauche()
           ^Poucet1:9: error: '=>' expected but integer literal found.
    case <=2 => droite()
           ^